--- a/themes/hexo-theme-matery/source/css/matery.css
+++ b/themes/hexo-theme-matery/source/css/matery.css
@@ -579,7 +579,7 @@ header .go-back i {
 }
 
 .bg-cover .title {
-    font-size: 4rem;
+    font-size: 2.3rem;
     line-height: 1.85em;
     margin-bottom: -20px;
     position: relative;
@@ -588,6 +588,7 @@ header .go-back i {
 .bg-cover .description {
     padding: 5px;
     line-height: 1.4em;
+    margin-top: 9px;
     color: black;
     font-family: "Times New Roman", serif;
 }
