--- a/themes/hexo-theme-matery/layout/index.ejs
+++ b/themes/hexo-theme-matery/layout/index.ejs
@@ -57,8 +57,9 @@
                             <div class="card-image">
                                 <% if (post.img) { %>
                                     <img src="<%= post.img %>" class="responsive-img" alt="<%- post.title %>">
-                                <% } else { %>
+                                <% } else{ %>
                                     <%
+                                        <!--随机取一张图片当封面图-->
                                         var featureimg = '/medias/featureimages/0.jpg';
                                         var featureImages = theme.featureImages;
                                         if (!featureImages || featureImages.length == 0) {
@@ -69,7 +70,8 @@
                                         var num = Math.abs(hashCode(post.title) % len);
                                         featureimg = featureImages[num];
                                     %>
-                                    <img src="<%- featureimg %>" class="responsive-img" alt="<%- post.title %>">
+                                    <img style="opacity: 0.1" src="<%- featureimg %>" class="responsive-img"
+                                         alt="<%- post.title %>">
                                 <% } %>
                                 <span class="card-title"><%- post.title %></span>
                             </div>
