--- a/themes/hexo-theme-matery/layout/index.ejs
+++ b/themes/hexo-theme-matery/layout/index.ejs
@@ -58,18 +58,18 @@
                                 <% if (post.img) { %>
                                     <img src="<%= post.img %>" class="responsive-img" alt="<%- post.title %>">
                                 <% } else{ %>
-                                    <%
-                                        <!--随机取一张图片当封面图-->
-                                        var featureimg = '/medias/featureimages/0.jpg';
-                                        var featureImages = theme.featureImages;
-                                        if (!featureImages || featureImages.length == 0) {
-                                            return featureimg;
-                                        }
+                                        <%
+                                            <!--随机取一张图片当封面图-->
+                                            var featureimg = 'https://my-blog-to-use.oss-cn-beijing.aliyuncs.com/bg/desktop7.jpg';
+                                            var featureImages = theme.featureImages;
+                                            if (!featureImages || featureImages.length == 0) {
+                                                return featureimg;
+                                            }
 
-                                        var len = featureImages.length;
-                                        var num = Math.abs(hashCode(post.title) % len);
-                                        featureimg = featureImages[num];
-                                    %>
+                                            var len = featureImages.length;
+                                            var num = Math.abs(hashCode(post.title) % len);
+                                            featureimg = featureImages[num];
+                                        %>
                                     <img style="opacity: 0.1" src="<%- featureimg %>" class="responsive-img"
                                          alt="<%- post.title %>">
                                 <% } %>
