修改部分样式

--- a/themes/hexo-theme-matery/layout/_partial/gitalk.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/gitalk.ejs
@@ -16,6 +16,7 @@
         clientID: '<%- theme.gitalk.oauth.clientId %>',
         clientSecret: '<%- theme.gitalk.oauth.clientSecret %>',
         repo: '<%- theme.gitalk.repo %>',
+        accessToken:'<%- theme.gitalk.oauth.accessToken %>',
         owner: '<%- theme.gitalk.owner %>',
         admin: <%- JSON.stringify(theme.gitalk.admin) %>,
         id: '<%- date(page.date, 'YYYY-MM-DDTHH-mm-ss') %>',
